--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,9 @@
     "babel-brunch": "6.1.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "foundation-sites": "^6.5.0-rc.2",
+    "jquery": "^3.3.1",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.10.0"
   }
 }
